<resources>
    <string name="app_name">Coffee</string>
    <string name="coffee_type">Coffee Type</string>
    <string name="title_activity_coffee_and_the_environment">Coffee And The Environment</string>
    <string name="coffee_production_and_labor">Coffee Production And Labor</string>
    <string name="coffee_overview1">
            A: Coffee is the world\'s second most valuable traded commodity, behind only petroleum.\n\n
            There are approximately 25 million farmers and coffee workers in over 50 countries involved in producing coffee around the world.\n\n
            Coffee was traditionally developed as a colonial cash crop, planted by serfs or wage laborers in tropical climates on large plantations of landowners for sale in colonial countries.\n\n
            Coffee producers, like most agricultural workers around the world, are kept in a cycle of poverty and debt by the current global economy designed to exploit cheap labor and keep consumer prices low.\n\n
            An estimated 11 million hectares of the world\'s farmland are dedicated to coffee cultivation.\n\n
            The largest producer and exporter is Brazil, followed by Colombia, Vietnam, Indonesia, and Mexico.\n\n
            Around the globe, the annual consumption of coffee has expanded to 12 billion pounds.\n\n
            For more information about the history of Latin America and coffee, see Coffee and Power by Jeffrey Paige (in bibliography)

           </string>
    <string name="coffee_overview2">
        A: Coffee is the US\'s largest food import and second most valuable commodity only after oil.\n\n
        According to the International Coffee Organization, the US imported 2.72 billion pounds of coffee from September 2001 to September 2002.\n\n
        The US primarily purchases coffee from Brazil, Colombia, Mexico, Guatemala, and Vietnam. The U.S.\n\n
        also buys coffee from Indonesia, Costa Rica, Peru, El Salvador, Ecuador, Venezuela, Honduras, Uganda, Thailand, Nicaragua, India, and Papua New Guinea.\n\n
        In the U.S. alone, over 130 million consumers are coffee drinkers.\n\n
        In recent years, new cafes have been opening at an explosive rate, making specialty coffee mainstream and increasing profit margins for specialty coffee roasters and retailers.\n\n
        The Specialty Coffee Association of America estimated that there are 10,000 coffee cafes and 2,500 specialty stores selling coffee.\n\n
        Chains represent %30$d of all coffee retail stores, but the majority remain in the hands of independent owners or small family businesses..\n\n

    </string>
    <string name="coffee_overview3">
        A: Coffee prices are set according to the New York \"C"\ Contract market.\n\n
        The price of coffee fluctuates wildly in this speculative economy, generally hovering around fifty cents per pound.\n\n
        Most coffee is traded by speculators in New York, who trade approximately 8-10 times the amount of actual coffee produced each year.\n\n
        The single most influential factor in world coffee prices is the weather in Brazil.\n\n
        Droughts and frosts portend shortages of coffee and the price increases.\n\n
        Specialty coffee is often imported at a negotiated price over the C market, which is considered a \'quality premium\'.\n\n
        Most of those premiums never reach the coffee farmer, but rather stay in the hands of the exporter.\n\n
        This creates a disincentive for farmers to increase their quality, as they do not receive the direct benefits of increased investment in producing better coffee.\n\n
    </string>
    <string name="coffee_overview4">
        A: Coffee is an extremely powerful commodity, reigning as the world\'s most heavily traded product, behind petroleum, and the largest food import of the United States.\n\n
        The global commodity chain for coffee involves a string of producers, middlemen, exporters, importers, roasters, and retailers before reaching the consumer.\n\n
        Coffee is a vital source of export for many of the developing countries that grow it.\n\n
        Some 20 million families in 50 countries now work directly in the cultivation of coffee an estimated 11 million hectares of the world\'s farmland are dedicated to coffee cultivation.\n\n
        Arabica and Robusta are the two principle species of coffee harvested today.\n\n
        Approximately %70$d of the world\'s production is the Arabica bean, used for higher-grade and specialty coffees, and %80$d of this bean comes from Latin America.\n\n
        Robusta is grown primarily in Africa and Asia.\n\n
      </string>
        <string name="coffee_overview20">
        Most small farmers sell directly to middlemen exporters who are commonly referred to as coyotes.\n\n
        These coyotes are known to take advantage of small farmers, paying them below market price for their harvests and keeping a high percentage for themselves.\n\n
        In contrast, large coffee estate owners usually process and export their own harvests that are sold at the prices set by the New York Coffee Exchange.\n\n
        However, extremely low wages ($2-3/day) and poor working conditions for farmworkers characterize coffee plantation jobs.\n\n
        Importers purchase green coffee from established exporters and large plantation owners in producing countries.\n\n
        Only those importers in the specialty coffee segment buy directly from the small farmer cooperatives.\n\n
        Importers provide a crucial service to roasters who do not have the capital resources to obtain quality green coffee from around the world. \n\n
        Importers bring in large container loads and hold inventory, selling gradually through numerous small orders.\n\n
        Since many roasters rely on this service, importers wield a great deal of influence over the types of green coffee that are sold in the US.\n\n
      </string>
    <string name="coffee_overview21">
    There are approximately 1200 roasters in the US today.\n\n
        Large roasters usually have one blend of recipes and sell to large retailers - the Big Three (Kraft, which owns Maxwell House and Sanka, owned by Philip Morris; Procter and Gamble, which owns Folgers and Millstone; and Nestle) maintain over %60$d of total green bean volume.
        Microroasters, or those who roast up to 500 bags of coffee a year, offer the product we know as specialty coffee.\n\n
        Most roasters buy coffee from importers in small, frequent purchases.\n\n
        Roasters have the highest profit margin in the value chain, thus making them an important link in the commodity chain.\n\n
         Retailers usually purchase packaged coffee from roasters, although an increasing number of retailers are also roasting their own beans for sale.\n\n
        The Specialty Coffee Association of America estimated that there are 10,000 cafes and 2,500 specialty stores selling coffee.\n\n
        Chains represent approximately %30$d of all coffee retail stores.\n\n
        However, supermarkets and traditional retail chains are still the primary channel for both specialty coffee and non-specialty coffee, and they hold about %60$d of marketshare of total coffee sales.
        Around the globe, the annual consumption of coffee is 12 billion pounds and in the U.S.\n\n
        alone, over 130 million consumers are coffee drinkers.\n\n

    </string>
<string name="coffee_overview5">
    A: Coffee farming originally developed in Africa as an understory crop beneath\n
    diverse shade trees that provided habitat for wildlife such as birds, butterflies, insects, and animals.\n
    Traditional farmers usually use sustainable agricultural techniques including composting coffee pulp,
    rotating crops, and not applying expensive chemicals and fertilizers.\n
    In addition, they usually cultivate food alongside cash crops,
    and intercrop other plants such as banana and nut trees which provide food security as well as additional sources of income.\n
    In the 1970s and 80s, as part of the general shift to \'technified agriculture\' during the so-called Green Revolution,
    the US Agency for International Development and other groups gave $80 million dollars for plantations in Central America to replace traditional shade grown farming techniques with \'sun cultivation\'
    techniques in order to increase yields. This resulted in the destruction of vast forests and biodiversity of over 1.1 million hectares.\n
  </string>
   <string name="coffee_overview22">
    \'Sun cultivated\' coffee involves the cutting down of trees, monocropping, and the input of chemical fertilizers and pesticides.\n
    This type of industrial coffee farming leads to severe environmental problems, such as pesticide pollution, deforestation and the extinction of songbirds through habitat destruction.\n
    The Smithsonian Institute has identified industrial coffee production as one of the major threats to songbirds in the hemisphere due to deforestation - the birds no longer have a habitat in which to live.
    Soil and water sources continue to be severely degraded by many coffee farms, as coffee pulp is often dumped into streams.\n
    In addition to the harmful effects on the environment caused by the use of chemical pesticides and herbicides in coffee cultivation, workers are also at risk of drinking contaminated water and being poisoned by pesticides.
    For these reasons, many bird, tree, and biodiversity conservationists have developed standards for promoting \"shade-grown"\ or \"bird-friendly"\
    certified coffee  that is, coffee grown under a canopy of diverse trees that provide habitat to birds.\n
    The Smithsonian Migratory Bird Center, as well as Rainforest Alliance and the Seattle Audubon Society,
    all promote various labels of coffee that promote tree and bird conserving farming practices.\n
    In addition, many consumers are committed to purchasing organic coffee in order to promote sustainable farming techniques in poor countries.\n
    For more information, see the Proceedings of the First Sustainable Coffee Congress by the Smithsonian Institute, which is a valuable resource on all issues of sustainability.
 </string>
    <string name="title_citge1">What role does coffee play in the global economy?</string>
    <string name="title_citge2">What role does coffee play in the US economy?</string>
    <string name="title_citge3">How are coffee prices currently set?</string>
    <string name="title_citge4">What is the commodity chain of the coffee industry?</string>
</resources>