<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CoffeeInTheGlobalEconomy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/content_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_citge1" />

        <TextView
            android:id="@+id/coffee_in_the_global_economy_textview"
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_overview1"/>

        <TextView
            style="@style/content_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_citge2" />

        <TextView
           style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_overview2" />

        <TextView
            style="@style/content_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_citge3" />

        <TextView
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_overview3" />

        <TextView
            style="@style/content_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_citge4" />

        <TextView
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_overview4" />
        <TextView
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_overview20" />

        <TextView
            style="@style/body_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee_overview21" />

    </LinearLayout>
</ScrollView>
